--- a/.env
+++ b/.env
@@ -1,8 +1,13 @@
+# m
+
+#  MONGO_URL = mongodb+srv://mock13:mock13@cluster0.uyiueap.mongodb.net/mock13
 
 
- MONGO_URL = mongodb+srv://mock13:mock13@cluster0.uyiueap.mongodb.net/mock-13?retryWrites=true&w=majority
+
+# # KEY=Abarakadabra
+# # PORT=8080
 
 
-
-KEY=Abarakadabra
-PORT=8080
+MONGO_URL ="mongodb+srv://mock13:mock13@cluster0.uyiueap.mongodb.net/test"
+# KEY = Abarakadabra
+# PORT = 8080
